# Transcribe-CLI

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
tests/: cli_tests.rs
