[package]
name = "transcribe_cli"
version = "0.1.0"
edition = "2021"
authors = ["Blaise Gulaj <bgulaj@gmail.com>"]
description = "A CLI tool for transcribing audio files using Deepgram"
license = "MIT"
repository = "https://github.com/TheLiberal/Transcribe-CLI/"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"
indicatif = "0.17.3"
url = "2.3.1"
tokio-util = { version = "0.7.0", features = ["codec"] }
futures-util = "0.3.28"
bytes = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.2"
dirs = "5.0"


[[bin]]
name = "transcribe"
path = "src/main.rs"